--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "dayjs": "^1.11.13",
     "firebase": "^9.23.0",
+    "gsap": "^3.12.5",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
