--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "vue": "^3.4.0",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.2.5",
-    "vue-toastification": "^2.0.0-rc.5",
-    "xlsx": "^0.18.5"
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
